--- a/helm/go-demo-5/deployment-orig.yaml
+++ b/helm/go-demo-5/deployment-orig.yaml
@@ -21,7 +21,7 @@ spec:
     spec:
       containers:
       - name: api
-        image: "vfarcic/go-demo-5:{{ .Values.image.tag }}"
+        image: "reversaidx/go-demo-5:{{ .Values.image.tag }}"
         env:
         - name: DB
           value: {{ template "helm.fullname" . }}-db
