--- a/helm/go-demo-5/values.yaml
+++ b/helm/go-demo-5/values.yaml
@@ -17,7 +17,7 @@ resources:
    memory: 100Mi
   requests:
    cpu: 100m
-   memory: 10M0i
+   memory: 100Mi
 dbResources:
   limits:
     memory: 200Mi
