--- a/helm/go-demo-5/values.yaml
+++ b/helm/go-demo-5/values.yaml
@@ -5,7 +5,7 @@ image:
   dbTag: 3.3
 ingress:
   enabled: true
-  host: acme.com
+  host: go-demo-5.35.194.15.104.nip.io
 service:
   # Change to NodePort if ingress.enable=false
   type: ClusterIP
